--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,22 @@
+buildscript {
+    dependencies {
+        classpath 'com.h2database:h2:1.4.197'
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'org.springframework.experimental.aot' version '0.10.2'
     id 'org.graalvm.buildtools.native' version '0.9.1'
+    id "org.flywaydb.flyway" version "7.14.0"
+}
+
+flyway {
+    url = 'jdbc:sqlserver://localhost;databaseName=sa_db'
+    user = 'sa_admin'
+    password = '12345678'
 }
 
 group = 'com.foo'
@@ -16,12 +29,15 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.hibernate:hibernate-core'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
+    implementation 'org.hibernate:hibernate-core:5.5.5.Final'
+    implementation 'org.flywaydb:flyway-core'
+
 //    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc:9.4.0.jre16'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.3'
 }
 
 test {
